# flow-test-dumux

./: .gitignore  .gitpod.yml  run.sh
examples/diffusion/doc/: main.md
flow-test-dumux/: CMakeLists.txt  config.h.cmake  dune.module  flow-test-dumux.pc.in
flow-test-dumux/bio/: CMakeLists.txt  properties.hh
flow-test-dumux/bio/material/fluidsystems/: biominsimplechemistry.hh
flow-test-dumux/bio/material/solidsystems/: biominsolids.hh
flow-test-dumux/cavity/: CMakeLists.txt
flow-test-dumux/cmake/modules/: CMakeLists.txt
flow-test-dumux/course/: CMakeLists.txt
flow-test-dumux/course/basic/: 2p2cmain.cc  2pmain.cc  2pnimain.cc  CMakeLists.txt  injection2p2cproblem.hh  injection2pniproblem.hh  injection2pproblem.hh  injection2pspatialparams.hh  params.input  properties2p.hh  properties2p2c.hh  properties2pni.hh  spatialparams.hh  spatialparams2pni.hh
flow-test-dumux/course/grids/: CMakeLists.txt  grids.cc  params.input  problem.hh  properties.hh  spatialparams.hh
flow-test-dumux/course/grids/grids/: grid_structured.dgf  grid_structured.geo  (+4 more)
flow-test-dumux/course/main/: 1pproblem.hh  1pspatialparams.hh  CMakeLists.txt  exercise1pamain.cc  exercise1pbmain.cc  exercise1pcmain.cc  exercise_mainfile_a.input  exercise_mainfile_b.input  exercise_mainfile_c.input  properties.hh
flow-test-dumux/course/properties/: CMakeLists.txt  mylocalresidual.hh  params.input  problem.hh  properties.cc  properties.hh  spatialparams.hh
flow-test-dumux/course/runtime/: CMakeLists.txt  main.cc  params.input  problem.hh  properties.hh  spatialparams.hh
flow-test-dumux/doc/: CMakeLists.txt
flow-test-dumux/doc/abstract/: CMakeLists.txt  main.tex
flow-test-dumux/doc/beamer/: .latexmkrc  blbliography.tex  cover.tex  dumux-conference-preamble.tex  dumux-conference-references.bib  dumux.tex  dune.tex  dunestyle-beamer.sty  introduction.tex  main.tex  richards.tex  soil.tex  thanks.tex
flow-test-dumux/doc/doxygen/: Doxylocal
flow-test-dumux/doc/poster/: CMakeLists.txt  abstract.tex  main.tex
flow-test-dumux/doc/report/: .latexmkrc  main.tex  param.input
flow-test-dumux/dune/: CMakeLists.txt
flow-test-dumux/dune/flow-test-dumux/: CMakeLists.txt  flow-test-dumux.hh
flow-test-dumux/freeflow/: CMakeLists.txt
flow-test-dumux/hello_world/: CMakeLists.txt  params.input  problem.hh  properties.hh  spatialparams.hh
flow-test-dumux/infiltration/: CMakeLists.txt
flow-test-dumux/lecture/: CMakeLists.txt
flow-test-dumux/lecture/1p2c_2p_2p2c/: CMakeLists.txt  exercise3.input  lens1p2cexercise3.cc  lens1p2cproblem.hh  lens1p2cproperties.hh  lens1p2cspatialparams.hh  lens2p2cexercise3.cc  lens2p2cproblem.hh  lens2p2cproperties.hh  lens2pexercise3.cc  lens2pproblem.hh  lens2pproperties.hh  lens2pspatialparams.hh
flow-test-dumux/lecture/1p2cvs2p/: CMakeLists.txt  exercise1.input  lens1p2cexercise1.cc  lens1p2cproblem.hh  lens1p2cproperties.hh  lens2pexercise1.cc  lens2pproblem.hh  lens2pproperties.hh
flow-test-dumux/lecture/2p/: CMakeLists.txt  lens2pexercise2.cc  lens2pexercise2.input  lens2pproblem.hh  lens2pproperties.hh
flow-test-dumux/lecture/buckleyleverett/: CMakeLists.txt  buckleyleverettanalyticsolution.hh  buckleyleverettexercise.cc  buckleyleverettexercise.input  buckleyleverettproblem.hh  buckleyleverettproperties.hh  buckleyleverettspatialparams.hh  pseudoh2o.hh  pseudooil.hh
flow-test-dumux/lecture/co2plume/: CMakeLists.txt  co2plumeshapeexercise.cc  co2plumeshapeexercise.input  co2plumeshapeproblem.hh  co2plumeshapeproperties.hh  co2plumeshapespatialparameters.hh
flow-test-dumux/lecture/henryproblem/: CMakeLists.txt
flow-test-dumux/lecture/naplinfiltration/: CMakeLists.txt  spatialparams.hh
flow-test-dumux/lecture/naplinfiltration/3p3c/: CMakeLists.txt  myh2oairmesitylene.hh  naplinfiltration3p3c.cc  naplinfiltration3p3c.input  problem.hh  properties.hh
flow-test-dumux/porenetwork/: CMakeLists.txt
flow-test-dumux/richards/: CMakeLists.txt  params.input
flow-test-dumux/richards/analytical/: CMakeLists.txt  params.input
flow-test-dumux/richards/annulus/: CMakeLists.txt
flow-test-dumux/richards/benchmarks/: CMakeLists.txt  benchmarks.cc  run_and_plot_m21.py
flow-test-dumux/richards/lens/: CMakeLists.txt  params.input  spatialparams.hh
flow-test-dumux/richards/nonisothermal/: CMakeLists.txt
flow-test-dumux/richards/nonisothermal/conduction/: CMakeLists.txt
flow-test-dumux/richards/nonisothermal/convection/: CMakeLists.txt
flow-test-dumux/richards/nonisothermal/evaporation/: CMakeLists.txt
flow-test-dumux/root_soil/: CMakeLists.txt  params.input
flow-test-dumux/rotation/: CMakeLists.txt
flow-test-dumux/shallow_water/: CMakeLists.txt
flow-test-dumux/src/: CMakeLists.txt  flow-test-dumux.cc
flow-test-dumux/tracer_transport/: CMakeLists.txt  params.input
script/: analytic.py  glossary.tex  main.py  soil.params
(+21 files in other folders)
